--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 # Public URL, used for OG Image when running nuxt generate
 NUXT_PUBLIC_SITE_URL=
+STUDIO_GITHUB_CLIENT_ID=xOv23limK76QXZeRQPI52
+STUDIO_GITHUB_CLIENT_SECRET=9fa470ca3d4e0b511136304a90c00c5e03ea91ca
