--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "better-sqlite3": "^12.4.1",
     "nuxt": "^4.2.1",
     "nuxt-og-image": "^5.1.12",
+    "nuxt-studio": "1.0.0-alpha.1",
+    "pnpm": "^10.22.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
