--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.1.0",
     "@standard-schema/spec": "^1.0.0",
+    "@vercel/analytics": "^1.5.0",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "nuxt": "^4.2.1",
