--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/content": "^3.8.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.1.0",
+    "@nuxtjs/sitemap": "7.4.7",
     "@standard-schema/spec": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vueuse/nuxt": "^13.9.0",
