--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/sitemap": "7.4.7",
     "@standard-schema/spec": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vueuse/nuxt": "^13.9.0",
     "better-sqlite3": "^12.4.1",
     "nuxt": "^4.2.1",
