--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.1.0",
     "@nuxtjs/sitemap": "7.4.7",
+    "@nuxtjs/supabase": "^2.0.1",
     "@standard-schema/spec": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
