--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "clean-reset": "rm -rf node_modules pnpm-lock.yaml .nuxt .nitro .output && pnpm store prune && npm cache clean --force"
+
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.73",
@@ -16,7 +18,6 @@
     "@nuxt/content": "^3.8.2",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.1.0",
-    "@nuxtjs/sitemap": "7.4.7",
     "@nuxtjs/supabase": "^2.0.1",
     "@standard-schema/spec": "^1.0.0",
     "@vercel/analytics": "^1.5.0",
@@ -25,7 +26,6 @@
     "better-sqlite3": "^12.4.1",
     "nuxt": "^4.2.1",
     "nuxt-og-image": "^5.1.12",
-    "nuxt-studio": "1.0.0-alpha.1",
     "pnpm": "^10.22.0",
     "zod": "^4.1.12"
   },
